feat: make keys specific to an application
